# Plant_Irigation

./: .gitignore  CMakeLists.txt  PROJEKT_DOKUMENTATION.md  README.md
examples/profiles/: README.md  basilikum.json  default_profile.json  dry_period_profile.json  erdbeeren.json  hot_summer_profile.json  kaktus.json
examples/secrets.h/: secrets.example.h
main/: CMakeLists.txt  Kconfig.projbuild  actor.c  actor.h  dht22.c  dht22.h  humid.c  humid.h  idf_component.yml  index.html  logger.c  main.c  pin_config.h  profile_manager.c  sd_storage.c  sd_storage.h  state.c  state.h  temp.c  temp.h  timer.c  timer.h  webserver.c  webserver.h  wlan.c
main/hardware/: actor.c  actor.h  air_sensor.c  air_sensor.h  button.c  button.h  dht22.c  dht22.h  pin_config.h  sd_storage.c  sd_storage.h  soil.c  soil.h  temp.c  temp.h
main/logic/: logger.c  logger.h  profile_manager.c  profile_manager.h  smart_logic.c  smart_logic.h  state.c  state.h  timer.c
main/web/: index.html  webserver.c  webserver.h  wlan.c  wlan.h
